tests/check/illegal_assign.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void illegal_reassign_int() {
  int i0 = 3;
  i0 = 4;    // not allow for current simple valno
  parallel i0 by 6 {} // ok. 'i0' is a bounded integer
  with i0 in [4] {}  // ok. 'i0' is a bounded integer
}
// CHECK: error: only mutables can be re-assigned (i0) 
// CHECK-NOT: error:{{.*}}i0{{.*}}

__co__ void illegal_reassign_bool() {
  bool ba = true;
  ba = false;    // not allow for current simple valno
  parallel ba by 6 {}   // ok. 'ba' is bounded integer
  with ba in [4] {}     // ok. 'ba' is another bounded integer
  bool bb = 0;   // not allow
  bool bc = false;
  ba = bc;       // not allow for current simple valno
  bc = 1;        // not allow
}
// CHECK: error: only mutables can be re-assigned (ba).
// CHECK-NOT: error:{{.*}}ba{{.*}}
// CHECK: error: `bb' is declared as "bool" but initialized as "s32".
// CHECK: error: only mutables can be re-assigned (ba).
// CHECK: error: only mutables can be re-assigned (bc).

__co__ void illegal_reassign_ituple() {
  ita = {3, 4};
  ita = {5, 6};  // error: reassign
  itb = {4};
  parallel p by 6 {
    itb = {2, 32, 78};  // ok. 'itb' is in another scope
  }
  with ita in [7, 8] {}  // ok. 'ita' is in another scope
}
// CHECK: error: only mutables can be re-assigned (ita).
// CHECK-NOT: error:{{.*}}itb{{.*}}
// CHECK-NOT: error:{{.*}}ita{{.*}}

__co__ void illegal_reassign_span() {
  mdsa : [3, 4];
  mdsa : [5, 6];           // error: redefine
  mdsa = [7, 8];           // error: re-assignment
  parallel mdsa by 6 {     // ok. 'mdsa' is a bounded integer
    mdsa : [4, 56, 78];    // fail. conflict with parallel by
    mdsa = [4, 56, 78];    // fail. conflict with parallel by
  }
  parallel p by 8 {
    mdsg : [3, 4];
    mdsg : 5;              // error: redefine
    mdsg = 4;              // error: re-assgin different type
  }
  parallel q by 8 {
    mdsf : [3, 4];
    mdsf : {5, 6, 7, 8};   // error: redefine
    mdsf = {5, 6, 7, 8};   // error: re-assgin different type
  }
  with b in [7, 8] {
    mdsb : [4, 56, 78];
    with c in [3, 3] {
       mdsb : [3, 3];    // ok. 'mdsa' is in another scope
       mdsb = [3, 3];    // error: re-assgin
    }
  }
}

// CHECK: error: symbol `mdsa' has been declared already.
// CHECK: error: only mutables can be re-assigned (mdsa).
// CHECK: error: symbol `mdsa' has been declared already.
// CHECK: error: only mutables can be re-assigned (mdsa).
// CHECK: error: `mdsg' is declared as "mdspan<> []" but initialized as "s32".
// CHECK: error: symbol `mdsg' has been declared already.
// CHECK: error: only mutables can be re-assigned (mdsg).
// CHECK: error: `mdsf' is declared as "mdspan<> []" but initialized as "ituple<4>".
// CHECK: error: symbol `mdsf' has been declared already.
// CHECK: error: only mutables can be re-assigned (mdsf).
// CHECK: error: only mutables can be re-assigned (mdsb).

// CHECK: Totally 17 errors have been detected
